# microservice

./: .gitignore  README.md
microservices-cache-app/deployments/: docker-compose.yml
microservices-cache-app/proto/keywords/: search.proto
microservices-cache-app/services/cache-service/: go.mod
microservices-cache-app/services/gateway/: go.mod  go.sum
microservices-cache-app/services/gateway/cmd/: main.go
microservices-cache-app/services/gateway/internal/builder/: dictionary_builder.go  text_dictionary_builder.go
microservices-cache-app/services/gateway/internal/config/: config.go
microservices-cache-app/services/gateway/internal/database/: postgres.go
microservices-cache-app/services/gateway/internal/handler/: health_handler.go  search_handler.go
microservices-cache-app/services/gateway/internal/model/: keyword.go
microservices-cache-app/services/gateway/internal/repository/: keyword_repository.go  postgres_keyword_repository.go
microservices-cache-app/services/gateway/internal/router/: router.go
microservices-cache-app/services/search-core/: CMakeLists.txt  Dockerfile
microservices-cache-app/services/search-core/configs/: config_vars.yaml  static_config.yaml
microservices-cache-app/services/search-core/src/: dictionary_component.cpp  dictionary_component.hpp  dictionary_handler.cpp  dictionary_handler.hpp  main.cpp  search_grpc_service.cpp  search_grpc_service.hpp  search_handler.cpp  search_handler.hpp
microservices-cache-app/services/user-service/: go.mod  go.sum
microservices-cache-app/services/user-service/cmd/: main.go
(+9 files in other folders)
